# xinux-tour

./: .gitignore  Cargo.toml  default.nix  flake.nix  shell.nix
data/: resources.gresource.xml
data/resources/ui/: window.ui
po/: ru.po  translations.pot
